# lookmovie2-scraper

./: .gitignore  README.md  add-captions-to-video.py  adventure-time-episodes.txt  get-video-links.py  gumball-episodes.txt  missing-adventure-time-episodes.txt  organize_seasons.py  pyproject.toml  pyvenv.cfg  scraper.py  util.py
.devcontainer/: Dockerfile  install_firefox.sh
archive/: episode-links.txt  test.py  test_ffmpeg.py
